--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -3,17 +3,78 @@
     padding: 20px;
     overflow-x: scroll;
     overflow-y: hidden;
-   
-    h2 {
-        color: #87827c;
-    }
     .card-wrapper {
 
         display: inline-flex;
         gap: 20px; 
     }
-
-    
+    .wrapper {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        margin-bottom: 10px;
+        h2 {
+            color: #87827c;
+        }
+        .switch {
+            position: relative;
+            display: inline-block;
+            width: 150px;
+            height: 36px;
+          }    
+          .switch input { 
+            opacity: 0;
+            width: 0;
+            height: 0;
+          }  
+          .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #fff;
+            -webkit-transition: .4s;
+            transition: .4s;
+            color: #1ed5a9;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 10px;
+            border: 1px solid #032541;
+            span {
+              z-index: 1;
+            }
+          }    
+          .slider:before {
+            position: absolute;
+            content: "";
+            height: 100%;
+            width: 50%;
+            left: -1px;
+            background-color: #032541;
+            -webkit-transition: .4s;
+            transition: .4s;       
+          }     
+          input:checked + .slider {
+            background-color: #fff;
+          
+          }      
+          input:focus + .slider {
+            box-shadow: 0 0 1px #fff;
+          }
+          
+          input:checked + .slider:before {
+            transform: translateX(75px);
+          }
+          .slider.round {
+            border-radius: 20px;
+          }
+          .slider.round:before {
+            border-radius: 20px;
+          }
+    } 
 }
 ::-webkit-scrollbar {
     height: 8px;
