--- a/src/pages/CardItemDetail/index.scss
+++ b/src/pages/CardItemDetail/index.scss
@@ -18,7 +18,7 @@ section {
     gap: 50px;
     padding: 50px;
     .movie-card {
-        width: 50%;
+        width: 300px;
         height: 450px;
         box-shadow: 1px 1px 2px;
         border-radius: 8px;
@@ -29,7 +29,7 @@ section {
         display: flex;
         flex-direction: column;
         gap: 20px;
-
+        flex:1;
       
         .movie-title {
             font-weight: 700;
