--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -23,6 +23,7 @@ header {
         .logo {
             width: 154px;
             height: 20px;
+            cursor: pointer;
         }
     }
     .left-side {
